fix overflow

--- a/packages/components/src/components/post-header/post-header.scss
+++ b/packages/components/src/components/post-header/post-header.scss
@@ -224,6 +224,7 @@
     height: calc(100vh - var(--header-height));
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 
     ::slotted(post-mainnavigation) {
       flex-grow: 1 !important;
